# OpenPin

./: README.md
client/: .gitignore  local.properties  settings.gradle.kts
client/app/: settings.gradle.kts
client/app/app/: build.gradle.kts
client/appframework/: build.gradle.kts
client/apps/primaryapp/: build.gradle.kts
client/apps/uiexample/: build.gradle.kts
client/daemon/: build.gradle.kts  settings.gradle.kts
client/gradle/: libs.versions.toml
client/gradle/wrapper/: gradle-wrapper.properties
daemon/: build.gradle.kts
interposer/pcb/: .gitignore  fp-lib-table  pin-interposer.kicad_pcb  pin-interposer.kicad_pro  pin-interposer.kicad_sch
interposer/pcb/debug-pads.pretty/: 4-smd-pads.kicad_mod
interposer/pcb/production/: bom.csv  positions.csv
interposer/pcb/spring-conn.pretty/: 854-22-004-10-001101.stp  (+1 more)
media-stream/: deploy_android.sh  go.mod  go.sum
media-stream/cmd/: media_stream.go
pty-exec/: CMakeLists.txt  deploy_android.sh  pty_exec.c
server/: .dockerignore  .env.dev  .env.template  .eslintrc.js  .gcloudignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  app.yaml.template  b.txt  dev.sh  docker-compose.yml  initdb.sh  nodemon.json  package-lock.json  package.json  prod.sh  tsconfig.dev.json  tsconfig.json
server/dashboard/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
server/prisma/: schema.prisma
server/src/: config.ts  dbTypes.d.ts  index.ts
tl-stream/: deploy_android.sh  go.mod  go.sum
tl-stream/chunker/: consts.go  pacing.go  writer.go
tl-stream/cmd/: streamer.go
(+499 files in other folders)
